--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
   <string name="steps_label">Steps</string>
   <string name="appwidget_text">EXAMPLE</string>
   <string name="add_widget">Add widget</string>
-  <string name="widget_empty_view_prompt">Open a recipe first</string>
+  <string name="widget_empty_view_prompt">Open a recipe first inside Bake That app</string>
+
+  <!--Shared Preferences keys-->
+  <string name="saved_ingredients_list">saved-list-ingredients</string>
 </resources>
